--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
 <title>Login</title>
 </head>
 <body>
-	<FORM action="http://localhost:8080/04_ServletJSP/login" method="GET">
+	<FORM action="http://localhost:8080/04_ServletJSP/login" method="POST">
 		
 			<p>Username: <INPUT TYPE="text" NAME="username" SIZE=50></p>
 			<p>Password: <INPUT TYPE="password" NAME="password" SIZE=30></p>
